force-app/main/default/objects/EE_M_I__c/EE_M_I__c.object-meta.xml
<CustomObject>
    <label>EE/M&amp;I</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Daily DE Totals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EE/M&amp;I</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>