force-app/main/default/objects/EE_M_I__c/fields/Total_EE__c.field-meta.xml
<CustomField>
    <fullName>Total_EE__c</fullName>
    <label>Total EE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>