force-app/main/default/objects/EE_M_I__c/fields/Total_M_I__c.field-meta.xml
<CustomField>
    <fullName>Total_M_I__c</fullName>
    <label>Total M&amp;I</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>