force-app/main/default/objects/EE_M_I__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Enrichment_Coordinator_Name__c</columns>
    <columns>Total_EE__c</columns>
    <columns>Total_M_I__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>